--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,16 @@
     <artifactId>myweb</artifactId>
     <version>1.0-SNAPSHOT</version>
     
+    <dependencies>
+        <!-- Other dependencies -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
