--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.example</groupId>
     <artifactId>myweb</artifactId>
-    <version></version>
+    <version>1.0</version>
     <packaging>war</packaging>
 
     <properties>
